--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
-    "express" : "4.17.1",
-    "cors" : "2.8.5",
-    "mongodb" : "4.0.1",
-    "yarn": "^1.22.10"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.4"
+    
   },
   "name": "server",
   "version": "1.0.0",
