--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.4"
-    
+"bufferutil": "^4.0.6",
+    "mongodb": "^4.4.0",
+    "utf-8-validate": "^5.0.8",
+    "ws": "^8.5.0"
   },
   "name": "server",
   "version": "1.0.0",
