--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "dev" : "node server.js",
     "dev:watch" : "nodemon server.js",
